changes made Ui fit for all mobile

--- a/src/app/features/auth/_components/forgot-password/forgot-password.component.scss
+++ b/src/app/features/auth/_components/forgot-password/forgot-password.component.scss
@@ -105,3 +105,88 @@
   }
 
 }
+@media screen and (max-width: 768px) {
+  .reset-password-form {
+    max-width: 90%;
+    padding: 10px 22px;
+    border-radius: 12px;
+    margin: 0px;
+
+
+    .form-group {
+      margin-bottom: 1.2rem;
+
+      label {
+        font-size: 0.9rem;
+      }
+
+      input,
+      select {
+        padding: 0.6rem 0.8rem;
+        font-size: 0.9rem;
+      }
+    }
+.back-to-login{
+      font-size: 0.9rem;
+      align-items: start !important;
+          justify-content: start !important;
+    }
+
+    .cooldown,
+    .error {
+      font-size: 0.8rem;
+    }
+
+    .password-group {
+      input {
+        padding-right: 2rem;
+      }
+
+      .eye-icon {
+        right: 0.5rem;
+        top: 70%;
+        font-size: 18px;
+      }
+}
+    .btn-primary {
+      padding: 0.6rem 1.2rem;
+      font-size: 0.95rem;
+    }
+  }
+  
+}
+
+@media screen and (max-width: 480px) {
+  .reset-password-form {
+    padding: 0.75rem;
+    border-radius: 8px;
+    max-width: 90% !important;
+    margin: 0px 0px ;
+
+    .back-to-login{
+      font-size: 0.9rem;
+      align-items: start !important;
+          justify-content: start !important;
+    }
+
+    .form-group {
+      margin-bottom: 1.2rem;
+
+      label {
+        font-size: 0.9rem;
+      }
+
+      input,
+      select {
+        padding: 0.6rem 0.8rem;
+        font-size: 0.9rem;
+      }
+    }
+
+    .btn-primary {
+      padding: 0.6rem 1.2rem;
+      font-size: 0.95rem;
+    }
+  }
+  
+}
