--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -406,6 +406,9 @@
       color: #682f12;
     }
     }
+    .category-item{
+      font-size: 0.75rem;
+    }
   .header-actions .action-item {
     .wishlist-badge,
     .cart-badge {
