feat: added cancel order option in orders and interceptors for error and every success operation.

--- a/src/app/features/orders/_components/track-order/track-order.component.html
+++ b/src/app/features/orders/_components/track-order/track-order.component.html
@@ -26,7 +26,8 @@
 <ng-template #loadingOrError>
   <p *ngIf="loadingSignal()">Loading tracking info...</p>
   <div class="empty-state" *ngIf="!loadingSignal()">
-    <img src="../../../../../assets/images/empty-truck.webp" alt="No Tracking" class="empty-state-img" />
+    <img src="../../../../../assets/images/empty-truck.webp" alt="No tracking available for Order"
+      class="empty-state-img" />
     <p class="empty-state-text">No tracking info available.</p>
   </div>
 </ng-template>
