--- a/src/app/features/product/_components/product-list/product-list.component.html
+++ b/src/app/features/product/_components/product-list/product-list.component.html
@@ -3,7 +3,7 @@
   <!-- 🔥 Top Sellers -->
   <div class="top-sellers">
     <div class="header">
-      <h3>Top Seller's</h3>
+      <h3>Top Sellers</h3>
     </div>
     <div class="product-container">
       @if (isTopSellersLoading()) {
@@ -29,7 +29,7 @@
   <!-- 📈 Week Top Sellers -->
   <div class="week-top-sellers">
     <div class="header">
-      <h3>Week Top Seller's</h3>
+      <h3>Week Top Sellers</h3>
     </div>
     <div class="product-container">
       @if (isWeekTopSellersLoading()) {
@@ -142,21 +142,9 @@
 
   </div>
 
-  <div class="shop-by-category">
+  <!-- <div class="shop-by-category">
     <div class="header">
       <h3>Blogs</h3>
     </div>
-
-    <!-- <div class="products">
-      <div *ngFor="let product of popularProducts" class="product-item">
-        <img [src]="product.imageUrl" [alt]="product.name" />
-        <p class="product-name">{{ product.name }}</p>
-        <p class="product-price">{{ product.price | currency: 'INR' }}</p>
-        <button (click)="addToCart(product)">Add to Cart</button>
-      </div>
-    </div> -->
-
-    <!-- <app-product></app-product> -->
-
-  </div>
+  </div> -->
 </section>
