--- a/src/app/shared/components/hero-section/hero-section.component.html
+++ b/src/app/shared/components/hero-section/hero-section.component.html
@@ -1,11 +1,6 @@
 <div class="hero-section">
   <div class="slider">
-    <img
-      *ngFor="let image of images; let i = index"
-      [src]="image"
-      [class.active]="i === currentIndex"
-      [class.inactive]="i !== currentIndex"
-      alt="Hero Image {{ i + 1 }}"
-    />
+    <img role="img" [attr.aria-label]="'Banner ' + (i + 1)" *ngFor="let image of images; let i = index" [src]="image"
+      [class.active]="i === currentIndex" [class.inactive]="i !== currentIndex" alt="Hero Image {{ i + 1 }}" />
   </div>
 </div>
